5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4160/executions/1800_2565.log
== TEST (2019-06-06 11:24:47) 
-- CODE:
from numpy import * 
vm = array(eval(input("Medias finais: ")))
vp = array(eval(input("Presencas: ")))
vc = int(input("Carga horaria: "))

vet = zeros(3, dtype=int)

for i in range(size(vm)):
	
	
-- ERROR:
File "XXXX", line 11
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:32:24) 
-- CODE:
from numpy import * 
vm = array(eval(input("Medias finais: ")))
vp = array(eval(input("Presencas: ")))
vc = int(input("Carga horaria: "))

vet = zeros(3, dtype=int)

for i in range(0,size(vm)):
	if vm[i]>= 5 and vp[i] > vc*(75/100):
		vet[0] = vet[0] + 1 #aprovado
	elif vm[i]< 5 and vp[i] > vc*(75/100):
		vet[1] = vet[1] + 1 #reprovado por falta
	elif vc <= vc * (75/100):
		vet[2] = vet[2] + 1
		
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 11:32:29) 
-- CODE:
from numpy import * 
vm = array(eval(input("Medias finais: ")))
vp = array(eval(input("Presencas: ")))
vc = int(input("Carga horaria: "))

vet = zeros(3, dtype=int)

for i in range(0,size(vm)):
	if vm[i]>= 5 and vp[i] > vc*(75/100):
		vet[0] = vet[0] + 1 #aprovado
	elif vm[i]< 5 and vp[i] > vc*(75/100):
		vet[1] = vet[1] + 1 #reprovado por falta
	elif vc <= vc * (75/100):
		vet[2] = vet[2] + 1
		
print(vet)
		
-- EXECUTION TIME:
0.86262
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[1 0 0]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[4 0 0]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[4 1 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:32:31) 
-- CODE:
from numpy import * 
vm = array(eval(input("Medias finais: ")))
vp = array(eval(input("Presencas: ")))
vc = int(input("Carga horaria: "))

vet = zeros(3, dtype=int)

for i in range(0,size(vm)):
	if vm[i]>= 5 and vp[i] > vc*(75/100):
		vet[0] = vet[0] + 1 #aprovado
	elif vm[i]< 5 and vp[i] > vc*(75/100):
		vet[1] = vet[1] + 1 #reprovado por falta
	elif vc <= vc * (75/100):
		vet[2] = vet[2] + 1
		
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:36:41) 
-- CODE:
from numpy import * 
vm = array(eval(input("Medias finais: ")))
vp = array(eval(input("Presencas: ")))
vc = int(input("Carga horaria: "))

vet = zeros(3, dtype=int)

for i in range(0,size(vm)):
	if vm[i]>= 5 and vp[i] > vc*(75/100):
		vet[0] = vet[0] + 1 #aprovado
	elif vm[i]< 5 and vp[i] > vc*(75/100):
		vet[1] = vet[1] + 1 #reprovado por nota
	elif vm[i]< 5 and vp[i] < vc*(75/100):
		vet[2] = vet[2] + 1
		
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 11:36:46) 
-- CODE:
from numpy import * 
vm = array(eval(input("Medias finais: ")))
vp = array(eval(input("Presencas: ")))
vc = int(input("Carga horaria: "))

vet = zeros(3, dtype=int)

for i in range(0,size(vm)):
	if vm[i]>= 5 and vp[i] > vc*(75/100):
		vet[0] = vet[0] + 1 #aprovado
	elif vm[i]< 5 and vp[i] > vc*(75/100):
		vet[1] = vet[1] + 1 #reprovado por nota
	elif vm[i]< 5 and vp[i] < vc*(75/100):
		vet[2] = vet[2] + 1
		
print(vet)
		
-- EXECUTION TIME:
1.01474
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[1 0 0]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[4 0 0]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[4 1 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:36:49) 
-- CODE:
from numpy import * 
vm = array(eval(input("Medias finais: ")))
vp = array(eval(input("Presencas: ")))
vc = int(input("Carga horaria: "))

vet = zeros(3, dtype=int)

for i in range(0,size(vm)):
	if vm[i]>= 5 and vp[i] > vc*(75/100):
		vet[0] = vet[0] + 1 #aprovado
	elif vm[i]< 5 and vp[i] > vc*(75/100):
		vet[1] = vet[1] + 1 #reprovado por nota
	elif vm[i]< 5 and vp[i] < vc*(75/100):
		vet[2] = vet[2] + 1
		
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:37:56) 
-- CODE:
from numpy import * 
vm = array(eval(input("Medias finais: ")))
vp = array(eval(input("Presencas: ")))
vc = int(input("Carga horaria: "))

vet = zeros(3, dtype=int)

for i in range(0,size(vm)):
	if vm[i]>= 5 and vp[i] >= vc*(75/100):
		vet[0] = vet[0] + 1 #aprovado
	elif vm[i]< 5 and vp[i] >= vc*(75/100):
		vet[1] = vet[1] + 1 #reprovado por nota
	elif vm[i]>= 5 and vp[i] < vc*(75/100):
		vet[2] = vet[2] + 1
		
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:38:08) 
-- CODE:
from numpy import * 
vm = array(eval(input("Medias finais: ")))
vp = array(eval(input("Presencas: ")))
vc = int(input("Carga horaria: "))

vet = zeros(3, dtype=int)

for i in range(0,size(vm)):
	if vm[i]>= 5 and vp[i] >= vc*(75/100):
		vet[0] = vet[0] + 1 #aprovado
	elif vm[i]< 5 and vp[i] >= vc*(75/100):
		vet[1] = vet[1] + 1 #reprovado por nota
	elif vm[i]>= 5 and vp[i] < vc*(75/100):
		vet[2] = vet[2] + 1
		
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:38:14) 
-- CODE:
from numpy import * 
vm = array(eval(input("Medias finais: ")))
vp = array(eval(input("Presencas: ")))
vc = int(input("Carga horaria: "))

vet = zeros(3, dtype=int)

for i in range(0,size(vm)):
	if vm[i]>= 5 and vp[i] >= vc*(75/100):
		vet[0] = vet[0] + 1 #aprovado
	elif vm[i]< 5 and vp[i] >= vc*(75/100):
		vet[1] = vet[1] + 1 #reprovado por nota
	elif vm[i]>= 5 and vp[i] < vc*(75/100):
		vet[2] = vet[2] + 1
		
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 11:38:28) 
-- CODE:
from numpy import * 
vm = array(eval(input("Medias finais: ")))
vp = array(eval(input("Presencas: ")))
vc = int(input("Carga horaria: "))

vet = zeros(3, dtype=int)

for i in range(0,size(vm)):
	if vm[i]>= 5 and vp[i] >= vc*(75/100):
		vet[0] = vet[0] + 1 #aprovado
	elif vm[i]< 5 and vp[i] >= vc*(75/100):
		vet[1] = vet[1] + 1 #reprovado por nota
	elif vm[i]>= 5 and vp[i] < vc*(75/100):
		vet[2] = vet[2] + 1
		
print(vet)
		
-- EXECUTION TIME:
1.04019
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[2 0 3]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[5 0 2]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[5 1 4]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 22:56:00) 
-- CODE:
from numpy import*

mf = array(eval(input("Media final: ")))
f = array(eval(input("Frequencia: ")))
ch = int(input("Carga horaria: "))

v = zeros(3,dtype=int)

for i in mf:
	if i >=5 and f >= 0.75*ch:    # aprovados
		v[0]= v[0] + 1
	elif i> 5:       #rep por nota
		v[1]= v[1] + 1
	elif f > 0.75 * ch:
		v[2] = v[2] + 1
print(v
-- ERROR:
File "XXXX", line 17
    
           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 22:56:07) 
-- CODE:
from numpy import*

mf = array(eval(input("Media final: ")))
f = array(eval(input("Frequencia: ")))
ch = int(input("Carga horaria: "))

v = zeros(3,dtype=int)

for i in mf:
	if i >=5 and f >= 0.75*ch:    # aprovados
		v[0]= v[0] + 1
	elif i> 5:       #rep por nota
		v[1]= v[1] + 1
	elif f > 0.75 * ch:
		v[2] = v[2] + 1
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 22:58:05) 
-- CODE:
from numpy import * 
vm = array(eval(input("Medias finais: ")))
vp = array(eval(input("Presencas: ")))
vc = int(input("Carga horaria: "))

vet = zeros(3, dtype=int)

for i in range(0,size(vm)):
	if vm[i]>= 5 and vp[i] >= vc*(75/100):
		vet[0] = vet[0] + 1 #aprovado
	elif vm[i]< 5 and vp[i] >= vc*(75/100):
		vet[1] = vet[1] + 1 #reprovado por nota
	elif vm[i]>= 5 and vp[i] < vc*(75/100):
		vet[2] = vet[2] + 1
		
print(vet)
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 22:58:18) 
-- CODE:
from numpy import * 
vm = array(eval(input("Medias finais: ")))
vp = array(eval(input("Presencas: ")))
vc = int(input("Carga horaria: "))

vet = zeros(3, dtype=int)

for i in range(0,size(vm)):
	if vm[i]>= 5 and vp[i] >= vc*(75/100):
		vet[0] = vet[0] + 1 #aprovado
	elif vm[i]< 5 and vp[i] >= vc*(75/100):
		vet[1] = vet[1] + 1 #reprovado por nota
	elif vm[i]>= 5 and vp[i] < vc*(75/100):
		vet[2] = vet[2] + 1
		
print(vet)
		

-- EXECUTION TIME:
1.20708
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[2 0 3]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[5 0 2]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[5 1 4]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
